--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -21,11 +21,11 @@
             style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
-	    style="color:#CCAAAA;">Registration</a> | <a
+	    style="color:#B40431;" href="./registration.html">Registration</a> | <a
             style="color:#B40431;">Programme</a> | <a
             style="color:#B40431;" href="keynotes.html">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
-	    style="color:#CCAAAA;">ICTAC School 2021</a>
+	    style="color:#B40431;" href="./school.html">ICTAC School 2021</a>
      <hr>
    </td>
 </tr>
@@ -353,7 +353,7 @@
     <td><strong>19:30</strong></td>
   </tr>
   <tr align = "left">
-    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>&nbsp;10 September&nbsp;</a></strong></td>
+    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#FRI";>&nbsp;10 September&nbsp;</a></strong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-10">&nbsp;10. Synthesis and Learning&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>2:00</strong></td>
