--- a/registration.html
+++ b/registration.html
@@ -49,7 +49,7 @@ is free of charge.</strong>
 <p class="text"><strong>Registration Deadlines:</strong>.
 <ul>
   <li>Presenters of accepted papers: Monday, 19 July 2021</li>
-  <li>Other participants: Thursday, 28 August 2021</li>
+  <li>Other participants: No deadline</li>
 </ul>
 </p>
 	   
