--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -429,7 +429,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;">&nbsp;CLOSING&nbsp;</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#CLOSING">&nbsp;CLOSING&nbsp;</a></strong></td>
     <td><strong>15 min.</strong></td>  
     <td><strong>6:30</strong></td>
     <td><strong>7:30</strong></td>
@@ -665,7 +665,7 @@
                  <tr>
                     <td>
 		      <a name="SESSION-6"></a><a name="PAPER-1"></a><a name="PAPER-54"></a><a name="PAPER-13"></a>
-                      <h3>THU 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 6: <a> (Chair: TBA)</h3>
+                      <h3>THU 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 6: Security and Privacy<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -709,7 +709,7 @@
                   <tr>
                     <td>
 		      <a name="SESSION-7"></a><a name="PAPER-56"></a><a name="PAPER-17"></a>
-                      <h3>THU 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 7: <a> (Chair: TBA)</h3>
+                      <h3>THU 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 7: Security and Privacy<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -788,7 +788,7 @@
                  <tr>
                     <td>
 		      <a name="SESSION-10"></a><a name="PAPER-52"></a><a name="PAPER-31"></a><a name="PAPER-2"></a>
-                      <h3>FRI 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 10: <a> (Chair: TBA)</h3>
+                      <h3>FRI 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 10: Synthesis and Learning<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -829,7 +829,7 @@
                   <tr>
                     <td>
 		      <a name="SESSION-11"></a><a name="PAPER-48"></a><a name="PAPER-41"></a><a name="PAPER-3"></a>
-                      <h3>FRI 17:30-19:00 GMT+6 - <a style="color:#B40431;">Session 11: <a> (Chair: TBA)</h3>
+                      <h3>FRI 17:30-19:00 GMT+6 - <a style="color:#B40431;">Session 11: Systems Calculi and Analysis<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -864,7 +864,7 @@
                   <tr>
                     <td>
  		     <a name="SESSION-12"></a><a name="PAPER-25"></a></a>
-                     <h3>FRI 19:00-19:30 GMT+6 - <a style="color:#B40431;">Session 12: <a> (Chair: TBA)</h3>
+                     <h3>FRI 19:00-19:30 GMT+6 - <a style="color:#B40431;">Session 12: Quantum Computing<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
