--- a/programme.html
+++ b/programme.html
@@ -790,7 +790,7 @@
 		      <a name="SESSION-10"></a><a name="PAPER-52"></a><a name="PAPER-31"></a><a name="PAPER-2"></a>
                       <h3>FRI 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 10: Synthesis and Learning<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
@@ -831,7 +831,7 @@
 		      <a name="SESSION-11"></a><a name="PAPER-48"></a><a name="PAPER-41"></a><a name="PAPER-3"></a>
                       <h3>FRI 17:30-19:00 GMT+6 - <a style="color:#B40431;">Session 11: Systems Calculi and Analysis<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
@@ -866,7 +866,7 @@
  		     <a name="SESSION-12"></a><a name="PAPER-25"></a></a>
                      <h3>FRI 19:00-19:30 GMT+6 - <a style="color:#B40431;">Session 12: Quantum Computing<a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
