--- a/school.html
+++ b/school.html
@@ -403,7 +403,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-15:00 -
-			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
 			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
@@ -412,7 +412,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                    <tr>
                     <td>
                       <p class="text"><strong>15:00-16:00 -
-			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
 			<strong>Ben Tyler</strong>
 			(Nazarbayev University, Kazakhstan)
                       </p>
@@ -582,7 +582,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>9:00-10:00 -
-			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
 			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
@@ -591,7 +591,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                    <tr>
                     <td>
                       <p class="text"><strong>10:00-11:00 -
-			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
 			<strong>Ben Tyler</strong>
 			(Nazarbayev University, Kazakhstan)
                       </p>
@@ -760,7 +760,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-11:00 -
-			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
 			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
@@ -769,7 +769,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                    <tr>
                     <td>
                       <p class="text"><strong>11:00-12:00 -
-			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
 			<strong>Ben Tyler</strong>
 			(Nazarbayev University, Kazakhstan)
                       </p>
@@ -940,7 +940,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>18:00-19:00 -
-			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
 			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
@@ -949,7 +949,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                    <tr>
                     <td>
                       <p class="text"><strong>19:00-20:00 -
-			<a style="color:#B40431;">Research and Industry</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
 			<strong>Ben Tyler</strong>
 			(Nazarbayev University, Kazakhstan)
                       </p>
