--- a/keynotes.html
+++ b/keynotes.html
@@ -22,7 +22,7 @@
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
             style="color:#B40431;" href="#registration.html">Registration</a> | <a
-            style="color:#B40431;" href="program.html">Programme</a> | <a
+            style="color:#B40431;" href="programme.html">Programme</a> | <a
             style="color:#B40431;">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
             style="color:#B40431;" href="school.html">ICTAC School 2021</a>
