--- a/school.html
+++ b/school.html
@@ -160,10 +160,10 @@ Computing</h2>
 			It also briefly touches upon some applications of Maude, and
 			extensions to real-time and probabilistic systems.
 		</p>
-		<p><strong>Course Materials:</a>
+		<p><strong>Course Materials:</strong>
 		   <a href="https://drive.google.com/drive/folders/1P1Z-xwZXb_MmjCloR1GD-3AKBE1o_-uP?usp=sharing">Part 1</a>,
 		   <a href="https://drive.google.com/drive/folders/1hTamHo0oG11APz-ZcjW6ZO_TPB8v21SJ?usp=sharing">Part 2</a>,
-		   <a href="https://drive.google.com/drive/folders/1Kl72tqHDynVHpV3dQsJePtHinsJ0JUR4?usp=sharing">Part 3</a></p>
+		   <a href="https://drive.google.com/drive/folders/1Kl72tqHDynVHpV3dQsJePtHinsJ0JUR4?usp=sharing">Part 3</a>
 		<hr>
 	</li>
 	<li><a name="COURSE-WIL"></a>
