--- a/school.html
+++ b/school.html
@@ -97,7 +97,7 @@ Computing</h2>
 			hand-held controllers. 
 			We will also look at the ways formal analysis contributed to the design of an internet-enabled ‘cafe open’ sign – IoT in action!
 		</p>
-		<p><a href="https://drive.google.com/drive/folders/1KA3kv87nk7wMe1wUK-7SvWbYspzA0Y3A?usp=sharing">Course Materials</a></p>
+		<p><strong><a href="https://drive.google.com/drive/folders/1KA3kv87nk7wMe1wUK-7SvWbYspzA0Y3A?usp=sharing">Course Materials</a></strong></p>
 		<hr>
 	</li>
 	<li><h3><a name="COURSE-JULIANA"></a>
@@ -124,7 +124,7 @@ Computing</h2>
 			In addition, this course will discuss how challenges arising in medicine can provide inspiration for further research on the
 			foundations of formal verification.
 		</p>
-		<p><a href="https://drive.google.com/drive/folders/1TgiyMBzf9THsJ2OANnVKRPrfbb9L1rCX?usp=sharing">Course Materials</a></p>
+		<p><strong><a href="https://drive.google.com/drive/folders/1TgiyMBzf9THsJ2OANnVKRPrfbb9L1rCX?usp=sharing">Course Materials</a></strong></p>
 		<hr>
 	</li>
 	<li><a name="COURSE-PETER"></a>
@@ -160,10 +160,10 @@ Computing</h2>
 			It also briefly touches upon some applications of Maude, and
 			extensions to real-time and probabilistic systems.
 		</p>
-		<p><strong>Course Materials:</strong>
+		<p><strong>Course Materials:
 		   <a href="https://drive.google.com/drive/folders/1P1Z-xwZXb_MmjCloR1GD-3AKBE1o_-uP?usp=sharing">Part 1</a>,
 		   <a href="https://drive.google.com/drive/folders/1hTamHo0oG11APz-ZcjW6ZO_TPB8v21SJ?usp=sharing">Part 2</a>,
-		   <a href="https://drive.google.com/drive/folders/1Kl72tqHDynVHpV3dQsJePtHinsJ0JUR4?usp=sharing">Part 3</a>
+		   <a href="https://drive.google.com/drive/folders/1Kl72tqHDynVHpV3dQsJePtHinsJ0JUR4?usp=sharing">Part 3</a>.</strong>
 		<hr>
 	</li>
 	<li><a name="COURSE-WIL"></a>
@@ -202,7 +202,7 @@ Computing</h2>
 			provided.
 			<br>
 		</p>
-		<p><a href="https://drive.google.com/drive/folders/1z-aubtebRshPM8_2NQRpOhh35lSwGPYn?usp=sharing">Course Materials</a></p>
+		<p><strong><a href="https://drive.google.com/drive/folders/1z-aubtebRshPM8_2NQRpOhh35lSwGPYn?usp=sharing">Course Materials</a></p></strong>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Research and Industry</a>
@@ -403,7 +403,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>14:00-15:00 -
-			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Security Research at Oracle Labs, Australia: Program Analysis Meets Security)</a></strong><br>
 			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
@@ -582,7 +582,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>9:00-10:00 -
-			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Security Research at Oracle Labs, Australia: Program Analysis Meets Security)</a></strong><br>
 			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
@@ -760,7 +760,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>10:00-11:00 -
-			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Security Research at Oracle Labs, Australia: Program Analysis Meets Security)</a></strong><br>
 			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
@@ -940,7 +940,7 @@ The lectures presented at the ICTAC School 2021 will be published in Springer's 
                   <tr>
                     <td>
                       <p class="text"><strong>18:00-19:00 -
-			<a style="color:#B40431;">Research and Industry (Formal Methods Adoption in Industry: An Experience Report)</a></strong><br>
+			<a style="color:#B40431;">Research and Industry (Security Research at Oracle Labs, Australia: Program Analysis Meets Security)</a></strong><br>
 			<strong>Padmanabhan Krishnan</strong>
 			(Oracle Labs, Australia)
                       </p>
