--- a/programme.html
+++ b/programme.html
@@ -527,7 +527,8 @@
                  <tr>
                     <td>
 		      <a name="SESSION-2"></a><a name="PAPER-15"></a><a name="PAPER-29"></a><a name="PAPER-16"></a>
-                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: Efficient Model Checking Methods<a> (Chair: TBA)</h3>
+                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: Efficient Model Checking Methods<a> 
+			      Chair: Martin Leucker)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -568,7 +569,8 @@
                   <tr>
                     <td>
 		      <a name="SESSION-3"></a><a name="PAPER-47"></a><a name="PAPER-6"></a>
-                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: Database and Distributed Transactions<a> (Chair: TBA)</h3>
+                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: Database and Distributed Transactions<a>
+			      (Chair: Marcello Bonsangue)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -602,7 +604,8 @@
                   <tr>
                     <td>
 		      <a name="SESSION-4"></a><a name="PAPER-39"></a><a name="PAPER-22"></a><a name="PAPER-9"></a>
-                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: Formalization and Verification in Coq and Isabelle<a> (Chair: TBA)</h3>
+                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: Formalization and Verification in Coq and Isabelle<a>
+			      (Chair: Sanjiva Prasad)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -665,7 +668,8 @@
                  <tr>
                     <td>
 		      <a name="SESSION-6"></a><a name="PAPER-1"></a><a name="PAPER-54"></a><a name="PAPER-13"></a>
-                      <h3>THU 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 6: Security and Privacy<a> (Chair: TBA)</h3>
+                      <h3>THU 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 6: Security and Privacy<a>
+			      (Chair: &Eacute;tienne Andr&eacute;)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -709,7 +713,8 @@
                   <tr>
                     <td>
 		      <a name="SESSION-7"></a><a name="PAPER-56"></a><a name="PAPER-17"></a>
-                      <h3>THU 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 7: Security and Privacy<a> (Chair: TBA)</h3>
+                      <h3>THU 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 7: Security and Privacy<a>
+			      (Chair: Fr&eacute;d&eacute;ric Mallet)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -788,7 +793,8 @@
                  <tr>
                     <td>
 		      <a name="SESSION-10"></a><a name="PAPER-52"></a><a name="PAPER-31"></a><a name="PAPER-2"></a>
-                      <h3>FRI 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 10: Synthesis and Learning<a> (Chair: TBA)</h3>
+                      <h3>FRI 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 10: Synthesis and Learning<a>
+			      (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -829,7 +835,8 @@
                   <tr>
                     <td>
 		      <a name="SESSION-11"></a><a name="PAPER-48"></a><a name="PAPER-41"></a><a name="PAPER-3"></a>
-                      <h3>FRI 17:30-19:00 GMT+6 - <a style="color:#B40431;">Session 11: Systems Calculi and Analysis<a> (Chair: TBA)</h3>
+                      <h3>FRI 17:30-19:00 GMT+6 - <a style="color:#B40431;">Session 11: Systems Calculi and Analysis<a>
+			      (Chair: Catuscia Palamidessi)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -864,7 +871,8 @@
                   <tr>
                     <td>
  		     <a name="SESSION-12"></a><a name="PAPER-25"></a></a>
-                     <h3>FRI 19:00-19:30 GMT+6 - <a style="color:#B40431;">Session 12: Quantum Computing<a> (Chair: TBA)</h3>
+                     <h3>FRI 19:00-19:30 GMT+6 - <a style="color:#B40431;">Session 12: Quantum Computing<a>
+			     (Chair: Martin Lukac)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
