--- a/programme.html
+++ b/programme.html
@@ -794,7 +794,7 @@
                     <td>
 		      <a name="SESSION-10"></a><a name="PAPER-52"></a><a name="PAPER-31"></a><a name="PAPER-2"></a>
                       <h3>FRI 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 10: Synthesis and Learning<a>
-			      (Chair: TBA)</h3>
+			      (Chair: Kazuhiro Ogata)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
