--- a/programme.html
+++ b/programme.html
@@ -498,6 +498,8 @@
 			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong>
 		               </p>
+			       <p class="text"><a class="link" style="color:#B40431;"
+						  href="https://drive.google.com/file/d/16aVdUkTxvR6mahzU4s6iEgvrMMhjGalY/view?usp=sharing">Session Video Recoding</a></p>
                     </td>
 		    <hr>
                    </tr>
