--- a/programme.html
+++ b/programme.html
@@ -514,8 +514,10 @@
 			 <p class="text">
                            <a class="link"
 			      style="color:#B40431;"
-                              href="keynotes.html#KIM">Abstract and Speaker's Biography</a> |
-                           The session video recording will be linked from here.</p>
+                              href="https://drive.google.com/file/d/1Eex3jEky4yzJsA4ALkW4C5NipBEfDMGN/view?usp=sharing">Session Video Recoding</a> |
+                           <a class="link"
+			      style="color:#B40431;"
+                              href="keynotes.html#KIM">Abstract and Speaker's Biography</a></p>
                       </p>
                     </td>
                     <hr>
