--- a/programme.html
+++ b/programme.html
@@ -538,7 +538,8 @@
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
-                         The session video recording will be linked from here.
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="https://drive.google.com/file/d/1AwTAWPuzqwe3bLda9jbEODlS02nyaSZG/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
 			<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a><br>
 				Yati Phyo, Canh Do Minh and Kazuhiro Ogata</strong>
@@ -580,7 +581,8 @@
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
-                         The session video recording will be linked from here.
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="https://drive.google.com/file/d/1iwhDrVtfWBHq-QRjB62slwqBc-vX1WFl/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a><br>
 				Luis Bustamante and Ana Teresa Martins</strong>
@@ -615,7 +617,8 @@
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
-                         The session video recording will be linked from here.
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="">Session Video Recoding</a></p>
                       <ul class="text">
 			<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a><br>
 			        Lu&iacute;s Cruz-Filipe, Fabrizio Montesi and Marco Peressotti</strong>
