--- a/programme.html
+++ b/programme.html
@@ -618,7 +618,7 @@
 			    style="color:#B40431;"
                             href=""></a>
                          <p class="text"><a class="link" style="color:#B40431;"
-				            href="">Session Video Recoding</a></p>
+				            href="https://drive.google.com/file/d/1wJKfyB3jFlgjjQeZRmkMIFrJ8qTqxL5h/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
 			<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a><br>
 			        Lu&iacute;s Cruz-Filipe, Fabrizio Montesi and Marco Peressotti</strong>
