--- a/programme.html
+++ b/programme.html
@@ -658,10 +658,13 @@
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <h3><a style="color:#B40431;">Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<a></h3>
 			 <p class="text">
+                           <p class="text"><a class="link" style="color:#B40431;"
+				               href="https://drive.google.com/file/d/1bG_uqm-y-lmOBGMP8j41uX2jnYdmNVSr/view?usp=sharing">Presentation Slides</a> |
+                           <p class="text"><a class="link" style="color:#B40431;"
+				               href="">Session Video Recoding</a> |
                            <a class="link"
 			      style="color:#B40431;"
-                              href="keynotes.html#WIL">Abstract and Speaker's Biography</a> |
-                           The session video recording will be linked from here.</p>
+			      href="keynotes.html#WIL">Abstract and Speaker's Biography</a></p>
                       </p>
                     </td>
                     <hr>
@@ -682,7 +685,8 @@
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
-                         The session video recording will be linked from here.
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="https://drive.google.com/file/d/15be0tinoqXx4Jyq_ZiMLsYFubgl0kBZW/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a>
 				<br>
@@ -760,11 +764,13 @@
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <h3><a style="color:#B40431;">Formal Design, Implementation and Verification of Blockchain Languages<a></h3>
-			 <p class="text">
-                           <a class="link"
-			      style="color:#B40431;"
-                              href="keynotes.html#GRIGORE">Abstract and Speaker's Biography</a> |
-                           The session video recording will be linked from here.</p>
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="https://drive.google.com/file/d/1ejgE-GjgJtaRWBnkkI4mflxW-12qE13I/view?usp=sharing">Session Video Recoding</a> |
+			                 <a class="link" style="color:#B40431;"
+				            href="https://docs.google.com/presentation/d/1MfwzQUHb-En2a8KjT2tYnOjqviyF-R0D/edit?usp=sharing&ouid=116201829359197832912&rtpof=true&sd=true">Presentation Slides</a> |
+			                 <a class="link"
+			                    style="color:#B40431;"
+                                            href="keynotes.html#GRIGORE">Abstract and Speaker's Biography</a></p>
                       </p>
                     </td>
                     <hr>
