--- a/programme.html
+++ b/programme.html
@@ -657,14 +657,13 @@
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <h3><a style="color:#B40431;">Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<a></h3>
-			 <p class="text">
-                           <p class="text"><a class="link" style="color:#B40431;"
-				               href="https://drive.google.com/file/d/1bG_uqm-y-lmOBGMP8j41uX2jnYdmNVSr/view?usp=sharing">Presentation Slides</a> |
-                           <p class="text"><a class="link" style="color:#B40431;"
-				               href="">Session Video Recoding</a> |
-                           <a class="link"
-			      style="color:#B40431;"
-			      href="keynotes.html#WIL">Abstract and Speaker's Biography</a></p>
+			 <p class="text"><a class="link" style="color:#B40431;"
+				            href="https://drive.google.com/file/d/1bG_uqm-y-lmOBGMP8j41uX2jnYdmNVSr/view?usp=sharing">Presentation Slides</a> |
+                                         <a class="link" style="color:#B40431;"
+				            href="">Session Video Recoding</a> |
+                                         <a class="link"
+			                    style="color:#B40431;"
+			                    href="keynotes.html#WIL">Abstract and Speaker's Biography</a></p>
                       </p>
                     </td>
                     <hr>
