--- a/programme.html
+++ b/programme.html
@@ -906,6 +906,11 @@
                     <td>
 		       <a name="CLOSING"></a>
 			    <h3>FRI 19:30-19:45 GMT+6 - <a style="color:#B40431;">CLOSING</a></h3>
+                         The session video recording will be linked from here.
+                      <ul class="text">
+                        <li><strong><a style="color:#B40431;">Best Paper Award</a></strong></li>
+                        <li><strong><a style="color:#B40431;">Announcement about ICTAC 2022</a></strong></li>
+                      </ul>
                     </td>
                   </tr>
 <br>
