--- a/programme.html
+++ b/programme.html
@@ -658,9 +658,9 @@
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <h3><a style="color:#B40431;">Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<a></h3>
 			 <p class="text"><a class="link" style="color:#B40431;"
-				            href="https://drive.google.com/file/d/1bG_uqm-y-lmOBGMP8j41uX2jnYdmNVSr/view?usp=sharing">Presentation Slides</a> |
+				            href="https://drive.google.com/file/d/1sZXi-IItREatr_RdLEA24_5MUCK00tAi/view?usp=sharing">Session Video Recoding</a> |
                                          <a class="link" style="color:#B40431;"
-				            href="">Session Video Recoding</a> |
+				            href="https://drive.google.com/file/d/1bG_uqm-y-lmOBGMP8j41uX2jnYdmNVSr/view?usp=sharing">Presentation Slides</a> |
                                          <a class="link"
 			                    style="color:#B40431;"
 			                    href="keynotes.html#WIL">Abstract and Speaker's Biography</a></p>
