--- a/programme.html
+++ b/programme.html
@@ -730,7 +730,8 @@
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
-                         The session video recording will be linked from here.
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="https://drive.google.com/file/d/1M5FKg_zrczBbO6iH9fQZnxVPJhLzr0V8/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">An Incentive Mechanism for Trading Personal Data in Data Market)</a><br>
 				Sayan Biswas, Kangsoo Jung and Catuscia Palamidessi</strong>
