--- a/programme.html
+++ b/programme.html
@@ -788,11 +788,13 @@
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <h3><a style="color:#B40431;">Qualitative–Quantitative Reasoning: thinking informally about formal things<a></h3>
-			 <p class="text">
-                           <a class="link"
-			      style="color:#B40431;"
-                              href="keynotes.html#ALAN">Abstract and Speaker's Biography</a> |
-                           The session video recording will be linked from here.</p>
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="">Session Video Recoding</a> |
+			                 <a class="link" style="color:#B40431;"
+				            href="https://docs.google.com/presentation/d/1ZEHbll2MIY-Z9k-P9TaxUXXg91d0K33a/edit?usp=sharing&ouid=116201829359197832912&rtpof=true&sd=true">Presentation Slides</a> |
+                                         <a class="link"
+			                    style="color:#B40431;"
+                                            href="keynotes.html#ALAN">Abstract and Speaker's Biography</a></p>
                       </p>
                     </td>
                     <hr>
@@ -891,7 +893,8 @@
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
-                         The session video recording will be linked from here.
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="https://drive.google.com/file/d/1E1DLQfTUg48jC325kOCNnftVgBe_k01A/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
 				Alejandro Díaz-Caro and Gilles Dowek</strong>
@@ -907,7 +910,8 @@
                     <td>
 		       <a name="CLOSING"></a>
 			    <h3>FRI 19:30-19:45 GMT+6 - <a style="color:#B40431;">CLOSING</a></h3>
-                         The session video recording will be linked from here.
+			       <p class="text"><a class="link" style="color:#B40431;"
+						  href="https://drive.google.com/file/d/1mEaztZV7S-Lyp38-IwWoLatjpL6ZN2fG/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">Best Paper Award</a></strong></li>
                         <li><strong><a style="color:#B40431;">Announcement about ICTAC 2022</a></strong></li>
