--- a/programme.html
+++ b/programme.html
@@ -789,7 +789,7 @@
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <h3><a style="color:#B40431;">Qualitative–Quantitative Reasoning: thinking informally about formal things<a></h3>
                          <p class="text"><a class="link" style="color:#B40431;"
-				            href="">Session Video Recoding</a> |
+				            href="https://drive.google.com/file/d/1_3mvx00uYLcQptVEaImiRm1l4upS-_AG/view?usp=sharing">Session Video Recoding</a> |
 			                 <a class="link" style="color:#B40431;"
 				            href="https://docs.google.com/presentation/d/1ZEHbll2MIY-Z9k-P9TaxUXXg91d0K33a/edit?usp=sharing&ouid=116201829359197832912&rtpof=true&sd=true">Presentation Slides</a> |
                                          <a class="link"
@@ -913,8 +913,15 @@
 			       <p class="text"><a class="link" style="color:#B40431;"
 						  href="https://drive.google.com/file/d/1mEaztZV7S-Lyp38-IwWoLatjpL6ZN2fG/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;">Best Paper Award</a></strong></li>
-                        <li><strong><a style="color:#B40431;">Announcement about ICTAC 2022</a></strong></li>
+                        <li><strong><a style="color:#B40431;">Best Paper Award</a></strong>shared between:
+		          <ul>
+			    <li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
+			                                          Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong></li>
+		            <li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
+				                                  Alejandro Díaz-Caro and Gilles Dowek</strong><li>
+			  </ul>
+			</li>
+                        <li><strong><a style="color:#B40431;">Announcement about ICTAC 2022:</a> See you next year in Tblisi, Georgia</strong></li>
                       </ul>
                     </td>
                   </tr>
