--- a/programme.html
+++ b/programme.html
@@ -913,12 +913,12 @@
 			       <p class="text"><a class="link" style="color:#B40431;"
 						  href="https://drive.google.com/file/d/1mEaztZV7S-Lyp38-IwWoLatjpL6ZN2fG/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;">Best Paper Award</a></strong>shared between:
+                        <li><strong><a style="color:#B40431;">Best Paper Award</a></strong> shared between:
 		          <ul>
 			    <li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
 			                                          Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong></li>
 		            <li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
-				                                  Alejandro Díaz-Caro and Gilles Dowek</strong><li>
+				                                  Alejandro Díaz-Caro and Gilles Dowek</strong></li>
 			  </ul>
 			</li>
                         <li><strong><a style="color:#B40431;">Announcement about ICTAC 2022:</a> See you next year in Tblisi, Georgia</strong></li>
