--- a/programme.html
+++ b/programme.html
@@ -916,11 +916,11 @@
                         <li><strong><a style="color:#B40431;">Best Paper Award</a></strong> shared between:
 		          <ul>
 			    <li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
-			                                          Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong><br>
+			                                          Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong>
 				  <p class="text"><a class="link" style="color:#B40431;"
 				     href="https://drive.google.com/file/d/12kKmaSJyfy6a8MxNkF2hYU5l1gBxplS0/view?usp=sharing">BPA certificate</a></p>
                             </li>
-		            <li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
+		            <li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a>
 				                                  Alejandro Díaz-Caro and Gilles Dowek</strong>
 				  <p class="text"><a class="link" style="color:#B40431;"
 				     href="https://drive.google.com/file/d/14MiG019VZUBvFcERBXyAC05Dr0_fLeOU/view?usp=sharing">BPA certificate</a></p>
