--- a/programme.html
+++ b/programme.html
@@ -815,7 +815,8 @@
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
-                         The session video recording will be linked from here.
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="">Session Video Recoding</a></p>
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">Reactive Synthesis from Visibly Register Pushdown Automata</a><br>
 				Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki</strong>
@@ -857,7 +858,8 @@
                          <a class="link"
 			    style="color:#B40431;"
                             href=""></a>
-                         The session video recording will be linked from here.
+                         <p class="text"><a class="link" style="color:#B40431;"
+				            href="">Session Video Recoding</a></p>
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a><br>
 				Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto</strong>
