--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Computing</h2>
 <ul>
 <li>The <strong>Best Paper Award</strong> has been announced during the:
     <a href="./programme.html#CLOSING">Closing Session</a><br>
-    THe conference is now <strong>closed</strong>. See you next year at <strong>ICTAC 2022 in Tblisi, Georgia</strong></li>
+    <strong>The conference is now closed</strong>. See you next year at <strong>ICTAC 2022 in Tblisi, Georgia</strong></li>
 <li><strong>The conference proceedings are now available for download:
     <br>
     <a href="https://link.springer.com/book/10.1007%2F978-3-030-85315-0">https://link.springer.com/book/10.1007%2F978-3-030-85315-0</a>
