--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Computing</h2>
 <h2 id="news" style="color:#B40431;">News</h2>
 <hr size="1">
 <ul>
-<li>The <strong>Best Paper Award</strong> has been announced during the:
+<li>The <strong>Best Paper Award</strong> has been announced during the
     <a href="./programme.html#CLOSING">Closing Session</a><br>
     <strong>The conference is now closed</strong>. See you next year at <strong>ICTAC 2022 in Tblisi, Georgia</strong></li>
 <li><strong>The conference proceedings are now available for download:
