--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Computing</h2>
 <hr size="1">
 <ul>
 <li>The <strong>Best Paper Award</strong> has been announced during the
-    <a href="./programme.html#CLOSING">Closing Session</a><br>
+	<strong><a href="./programme.html#CLOSING">Closing Session</a></strong><br>
     <strong>The conference is now closed</strong>. See you next year at <strong>ICTAC 2022 in Tblisi, Georgia</strong></li>
 <li><strong>The conference proceedings are now available for download:
     <br>
