--- a/programme.html
+++ b/programme.html
@@ -921,11 +921,17 @@
 			                                          Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong><br>
 				  <a class="link" style="color:#B40431;"
 				     href="https://drive.google.com/file/d/12kKmaSJyfy6a8MxNkF2hYU5l1gBxplS0/view?usp=sharing">BPA certificate</a>
-                            </li>
+ 				  and
+				  <a class="link" style="color:#B40431;"
+				     href="https://drive.google.com/file/d/10bhkxAPn1Sn1ZwArvFRE0CpYsU1jRylC/view?usp=sharing">500 &euro; Springer Prize</a>.
+                           </li>
 		            <li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
 				                                  Alejandro Díaz-Caro and Gilles Dowek</strong><br>
 				  <a class="link" style="color:#B40431;"
 				     href="https://drive.google.com/file/d/14MiG019VZUBvFcERBXyAC05Dr0_fLeOU/view?usp=sharing">BPA certificate</a>
+				  and
+				  <a class="link" style="color:#B40431;"
+				     href="https://drive.google.com/file/d/1CMrcLEbduaDq5OWrhV3wBLCnOq3pUoLk/view?usp=sharing">500 &euro; Springer Prize</a>.
 		            </li>
 			  </ul>
 			</li>
