--- a/programme.html
+++ b/programme.html
@@ -915,7 +915,7 @@
 			       <p class="text"><a class="link" style="color:#B40431;"
 						  href="https://drive.google.com/file/d/1mEaztZV7S-Lyp38-IwWoLatjpL6ZN2fG/view?usp=sharing">Session Video Recoding</a></p>
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;">Best Paper Award</a></strong> shared between:
+                        <li><strong><a style="color:#B40431;">Best Paper Award</a></strong> shared by:
 		          <ul>
 			    <li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a><br>
 			                                          Muhammad Hannan Khan, Osman Hasan and Shahid Khan</strong><br>
