--- a/school.html
+++ b/school.html
@@ -234,8 +234,9 @@ Computing</h2>
 			Specifically, I will discuss our use of a general-purpose design language, our development of intuitive graphics-based tools
 			to make the system design task easier, and how we applied automated model checking to the resulting system models.
 			I will also discuss our interaction with and feedback from clients regarding these tools.
+			<br>
 		</p>
-		</ul>
+		<p><strong><a href="https://drive.google.com/drive/folders/1wpOPrMg3l_PDNWb9dmlEPkSU3Hmid0FV?usp=sharing">Course Materials</a></p></strong>
 		<hr>
 	</li>
 	<li><a name="COURSE-ANTONIO"></a>
@@ -243,6 +244,7 @@ Computing</h2>
 		(<i>2 hours</i> - Tue 7 Sep 18:00-20:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Antonio Cerone</h3></li>
+		</ul>
 		<p><em><strong>Department of Computer Science, School of Engineering and Digital Sciences, Nazarbayev University, Kazakhstan</em></strong></p>
 		<p><strong>Abstract:</strong>
 			Because of their purely mathematical nature and high complexity, formal methods are often perceived in industrial contexts
@@ -260,9 +262,9 @@ Computing</h2>
 			in order to allow analysts who are not expert in formal methods to formally verify human-computer interactions.
 			Finally, the last part of the course, explores possible research developments in using formal methods to validate interactive
 			systems in the context of their real world usage.
+			<br>
 		</p>
-		</ul>
-		<hr>
+                <hr>
 </ol>
 The lectures presented at the ICTAC School 2021 will be published in Springer's Tutorial line of Lecture Notes in Computer Science.
 <br>	
