--- a/school.html
+++ b/school.html
@@ -163,7 +163,7 @@ Computing</h2>
 		<p><strong>Course Materials:
 		   <a href="https://drive.google.com/drive/folders/1P1Z-xwZXb_MmjCloR1GD-3AKBE1o_-uP?usp=sharing">Part 1</a>,
 		   <a href="https://drive.google.com/drive/folders/1hTamHo0oG11APz-ZcjW6ZO_TPB8v21SJ?usp=sharing">Part 2</a>,
-		   <a href="https://drive.google.com/drive/folders/1Kl72tqHDynVHpV3dQsJePtHinsJ0JUR4?usp=sharing">Part 3</a>.</strong>
+		   <a href="https://drive.google.com/drive/folders/1Kl72tqHDynVHpV3dQsJePtHinsJ0JUR4?usp=sharing">Part 3</a>.</strong></p>
 		<hr>
 	</li>
 	<li><a name="COURSE-WIL"></a>
@@ -202,7 +202,7 @@ Computing</h2>
 			provided.
 			<br>
 		</p>
-		<p><strong><a href="https://drive.google.com/drive/folders/1z-aubtebRshPM8_2NQRpOhh35lSwGPYn?usp=sharing">Course Materials</a></p></strong>
+		<p><strong><a href="https://drive.google.com/drive/folders/1z-aubtebRshPM8_2NQRpOhh35lSwGPYn?usp=sharing">Course Materials</a></strong></p>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Research and Industry</a>
@@ -220,7 +220,8 @@ Computing</h2>
 			I will also outline the challenges that we overcame to ensure our research was  deployed in practice.
 			I will conclude with some of the remaining challenges especially in the context of DevSecOps.
 		</p>
-			<li><a name="COURSE-PADDY"></a>
+			<p><strong><a href="">Course Materials</a>/strong> (restricted to Nazarbayev University account holders)</p>
+			<li><a name="COURSE-BEN"></a>
 	                     <h3><a style="color:#B40431;">Formal Methods Adoption in Industry: An Experience Report</a>
 		            (<i>1 hour</i> - Mon 6 Sep 15:00-16:00 GMT+6)</h3>
 			    <h3>Ben Tyler</h3></li>
@@ -236,6 +237,7 @@ Computing</h2>
 			I will also discuss our interaction with and feedback from clients regarding these tools.
 			<br>
 		</p>
+		<p><strong><a href="">Course Materials</a></strong></p>
 		<hr>
 	</li>
 	<li><a name="COURSE-ANTONIO"></a>
@@ -263,7 +265,7 @@ Computing</h2>
 			systems in the context of their real world usage.
 			<br>
 		</p>
-		<p><strong><a href="https://drive.google.com/drive/folders/1wpOPrMg3l_PDNWb9dmlEPkSU3Hmid0FV?usp=sharing">Course Materials</a></p></strong>
+		<p><strong><a href="https://drive.google.com/drive/folders/1wpOPrMg3l_PDNWb9dmlEPkSU3Hmid0FV?usp=sharing">Course Materials</a></strong></p>
                 <hr>
 </ol>
 The lectures presented at the ICTAC School 2021 will be published in Springer's Tutorial line of Lecture Notes in Computer Science.
