--- a/school.html
+++ b/school.html
@@ -220,7 +220,7 @@ Computing</h2>
 			I will also outline the challenges that we overcame to ensure our research was  deployed in practice.
 			I will conclude with some of the remaining challenges especially in the context of DevSecOps.
 		</p>
-			<p><strong><a href="">Course Materials</a>/strong> (restricted to Nazarbayev University account holders)</p>
+			<p><strong><a href="">Course Materials</a></strong> (restricted to Nazarbayev University account holders)</p>
 			<li><a name="COURSE-BEN"></a>
 	                     <h3><a style="color:#B40431;">Formal Methods Adoption in Industry: An Experience Report</a>
 		            (<i>1 hour</i> - Mon 6 Sep 15:00-16:00 GMT+6)</h3>
