--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@ Computing</h2>
 <h2 id="news" style="color:#B40431;">News</h2>
 <hr size="1">
 <ul>
+<li><strong>The school tutorial volume is now available for download:
+    <br>
+    <a href="https://link.springer.com/book/10.1007/978-3-031-43678-9">https://link.springer.com/book/10.1007/978-3-031-43678-9</a>
+    <br>
+    Free download for ICTAC 2021 conference and school participants until 21 December 2023</strong></li>
 <li>The <strong>Best Paper Award</strong> has been announced during the
 	<strong><a href="./programme.html#CLOSING">Closing Session</a></strong><br>
     <strong>The conference is now closed</strong>. See you next year at <strong>ICTAC 2022 in Tblisi, Georgia</strong></li>
