--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ Computing</h2>
 <ul>
 <li><strong>The school tutorial volume is now available for download:
     <br>
-    <a href="https://link.springer.com/book/10.1007/978-3-031-43678-9">https://link.springer.com/book/10.1007/978-3-031-43678-9</a>
+    <a href="https://link.springer.com/book/10.1007/978-3-031-43678-9"
+       target="_tab">https://link.springer.com/book/10.1007/978-3-031-43678-9</a>
     <br>
     Free download for ICTAC 2021 conference and school participants until 21 December 2023</strong></li>
 <li>The <strong>Best Paper Award</strong> has been announced during the
@@ -56,7 +57,8 @@ Computing</h2>
     <strong>The conference is now closed</strong>. See you next year at <strong>ICTAC 2022 in Tblisi, Georgia</strong></li>
 <li><strong>The conference proceedings are now available for download:
     <br>
-    <a href="https://link.springer.com/book/10.1007%2F978-3-030-85315-0">https://link.springer.com/book/10.1007%2F978-3-030-85315-0</a>
+    <a href="https://link.springer.com/book/10.1007%2F978-3-030-85315-0"
+       target="_tab">https://link.springer.com/book/10.1007%2F978-3-030-85315-0</a>
     <br>
     Free download for ICTAC 2021 participants from 1 to 28 September 2021</strong></li>
 <li>The conference will be entirely in virtual mode and there will be no conference fee.</li>
