--- a/school.html
+++ b/school.html
@@ -38,7 +38,9 @@ Computing</h2>
 <tr height="10pt">
   <td align="center">
     <hr> <h2><a style="color:#B40431;" href="#COURSES">Courses</a> | <a
-		style="color:#B40431;" href="#SCHEDULE+6">Schedule</a></h2>
+		style="color:#B40431;" href="#SCHEDULE+6">Schedule</a> | <a
+		style="color:#B40431;" href="https://link.springer.com/book/10.1007/978-3-031-43678-9"
+			               target="_tab">LNCS Tutorial Volume</a>"</h2>
      <hr>
    </td>
 </tr>
