--- a/school.html
+++ b/school.html
@@ -40,7 +40,7 @@ Computing</h2>
     <hr> <h2><a style="color:#B40431;" href="#COURSES">Courses</a> | <a
 		style="color:#B40431;" href="#SCHEDULE+6">Schedule</a> | <a
 		style="color:#B40431;" href="https://link.springer.com/book/10.1007/978-3-031-43678-9"
-			               target="_tab">LNCS Tutorial Volume</a>"</h2>
+			               target="_tab">LNCS Tutorial Volume</a></h2>
      <hr>
    </td>
 </tr>
