--- a/school.html
+++ b/school.html
@@ -44,7 +44,14 @@ Computing</h2>
      <hr>
    </td>
 </tr>
-</center>	
+</center>
+<p></p>The school tutorial volume is now available for download:
+    <br>
+    <a href="https://link.springer.com/book/10.1007/978-3-031-43678-9"
+       target="_tab">https://link.springer.com/book/10.1007/978-3-031-43678-9</a>
+    <br>
+    Free download for ICTAC 2021 conference and school participants until 31 December 2023</p>
+<br>
 <a name="COURSES"></a>
 <center>
 <h1 style="color:#B40431;">COURSES</h1>
