--- a/school.html
+++ b/school.html
@@ -48,7 +48,7 @@ Computing</h2>
 <p></p>The school tutorial volume is now available for download:
     <a href="https://link.springer.com/book/10.1007/978-3-031-43678-9"
        target="_tab">https://link.springer.com/book/10.1007/978-3-031-43678-9</a>.
-    Free download for ICTAC 2021 conference and school participants until 31 December 2023</p>
+    Free download for ICTAC 2021 conference and school participants until 31 December 2023.</p>
 <hr>
 <a name="COURSES"></a>
 <center>
